--- a/public/help/index.html
+++ b/public/help/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet"
         href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css">
   <link rel="stylesheet" href="/src/css/help.css">
+  <link rel="manifest" href="../manifest.webmanifest.json">
 </head>
 <body>
 
