--- a/public/index.html
+++ b/public/index.html
@@ -6,94 +6,100 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>IKT-PWA</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet"
-        href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/src/css/app.css">
   <link rel="stylesheet" href="/src/css/feed.css">
+  <link rel="manifest" href="manifest.webmanifest.json">
 </head>
 <body>
 
 <div id="app">
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-      <div class="mdl-layout__header-row">
-        <!-- Title -->
-        <span class="mdl-layout-title">IKT-PWA</span>
-        <!-- Add spacer, to align navigation to the right -->
-        <div class="mdl-layout-spacer"></div>
-        <!-- Navigation. We hide it in small screens. -->
-        <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="/">Bilder</a>
-          <a class="mdl-navigation__link" href="/help">Hilfe</a>
-          <div class="drawer-option">
-            <button class="enable-notifications mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color--accent">
-              Benachrichtigungen Ein
-            </button>
-          </div>
-        </nav>
+  <div >
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">IKT-PWA</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+       <ul class="navbar-nav mr-auto">
+         <li class="nav-item active">
+           <a class="nav-link" href="/">Bilder<span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="/help">Hilfe</a>
+         </li>
+       </ul>
+
+           <div class="drawer-option">
+             <button type="button" class="btn btn-danger">Benachrichtigungen Ein</button>
+           </div>
+
+
+        <span class="navbar-text"></span>
       </div>
-    </header>
-    <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">IKT-PWA</span>
-      <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="/">Bilder</a>
-        <a class="mdl-navigation__link" href="/help">Hilfe</a>
-        <div class="drawer-option">
-          <button class="enable-notifications mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color--accent">
-            Benachrichtigungen Ein
-          </button>
-        </div>
-      </nav>
-    </div>
-    <main class="mdl-layout__content mat-typography">
-      <div id="create-post">
-        <form>
-          <div class="input-section mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="title">
-            <label class="mdl-textfield__label" for="title" name="title">Titel</label>
-          </div>
-          <div class="input-section mdl-textfield mdl-js-textfield mdl-textfield--floating-label" id="manual-location">
-            <input class="mdl-textfield__input" type="text" id="location">
-            <label class="mdl-textfield__label" for="location" name="location">Ort</label>
-          </div>
-          <br>
-          <div>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color--accent"
-                    type="submit" id="post-btn">Speichern
-            </button>
-          </div>
-          <br>
-          <div>
-            <button class="mdl-button mdl-js-button mdl-button--fab" id="close-create-post-modal-btn" type="button">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-        </form>
-      </div>
-      <img src="/src/images/htw.jpg"
-           alt="HTW Wilhelminenhof"
-           class="main-image">
-      <div class="page-content">
-        <h5 class="text-center mdl-color-text--primary">HTW-Insta</h5>
-        <div id="shared-moments"></div>
-      </div>
-      <div class="floating-button">
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored"
-                id="share-image-button">
-          <i class="material-icons">add</i>
-        </button>
-      </div>
-      <div id="confirmation-toast" aria-live="assertive" aria-atomic="true" aria-relevant="text" class="mdl-snackbar mdl-js-snackbar">
-        <div class="mdl-snackbar__text"></div>
-        <button type="button" class="mdl-snackbar__action"></button>
-      </div>
-    </main>
-  </div>
+    </nav>
+    <!-- <div class="mdl-layout__drawer">
+     <span class="mdl-layout-title">IKT-PWA</span>
+     <nav class="mdl-navigation">
+       <a class="mdl-navigation__link" href="/">Bilder</a>
+       <a class="mdl-navigation__link" href="/help">Hilfe</a>
+       <div class="drawer-option">
+         <button class="enable-notifications mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color--accent">
+           Benachrichtigungen Ein
+         </button>
+       </div>
+     </nav>
+   </div> -->
+   <main class="mdl-layout__content mat-typography">
+     <div id="create-post">
+       <form>
+         <div class="input-section mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+           <input class="mdl-textfield__input" type="text" id="title">
+           <label class="mdl-textfield__label" for="title" name="title">Titel</label>
+         </div>
+         <div class="input-section mdl-textfield mdl-js-textfield mdl-textfield--floating-label" id="manual-location">
+           <input class="mdl-textfield__input" type="text" id="location">
+           <label class="mdl-textfield__label" for="location" name="location">Ort</label>
+         </div>
+         <br>
+         <div>
+           <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color--accent"
+                   type="submit" id="post-btn">Speichern
+           </button>
+         </div>
+         <br>
+         <div>
+           <button class="mdl-button mdl-js-button mdl-button--fab" id="close-create-post-modal-btn" type="button">
+             <i class="material-icons">close</i>
+           </button>
+         </div>
+       </form>
+     </div>
+     <img src="/src/images/htw.jpg"
+          alt="HTW Wilhelminenhof"
+          class="main-image">
+     <div class="page-content">
+       <h5 class="text-center mdl-color-text--primary">HTW-Insta</h5>
+       <div id="shared-moments"></div>
+     </div>
+     <div class="floating-button">
+       <button type="button" class="btn btn-danger" style="border-radius: 30px"
+               id="share-image-button">
+         <i class="material-icons">+</i>
+       </button>
+     </div>
+     <div id="confirmation-toast" aria-live="assertive" aria-atomic="true" aria-relevant="text" class="mdl-snackbar mdl-js-snackbar">
+       <div class="mdl-snackbar__text"></div>
+       <button type="button" class="mdl-snackbar__action"></button>
+     </div>
+   </main>
+ </div>
 </div>
 <script defer src="/src/js/material.min.js"></script>
 <script src="/src/js/app.js"></script>
 <script src="/src/js/feed.js"></script>
+
 </body>
 </html>
